Fix layout and misaligned errors while initial animations

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,22 @@
 @import "./styles/toast.css";
 @import "./styles/ImageIconAnimations.css";
 
+html,
+body {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+#root {
+  width: 100%;
+  max-width: 100%;
+}
+
+section {
+  max-width: 100vw;
+}
+
 /* Font family */
 @font-face {
   font-family: "Londrina";
@@ -33,6 +49,12 @@
   font-weight: 900;
   font-style: normal;
   font-display: swap;
+}
+
+.navbar {
+  left: 0;
+  right: 0;
+  width: 100vw;
 }
 
 .navbar-scroll.navbar-scrolled {
